--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,17 +32,13 @@ services:
     image: minio/mc:latest
     depends_on:
       - minio
-    entrypoint: >
-      /bin/sh -c "
-      until mc alias set local http://minio:9000 $$MINIO_ROOT_USER $$MINIO_ROOT_PASSWORD; do sleep 1; done;
-      mc mb --ignore-existing local/audio-private;
-      mc mb --ignore-existing local/audio-public;
-      mc mb --ignore-existing local/audio-artifacts;
-      exit 0;
-      "
+    entrypoint: ["/bin/sh", "/usr/local/bin/minio-init.sh"]
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_CORS_ORIGINS: '["http://localhost:5173","http://127.0.0.1:5173"]'
+    volumes:
+      - ./infra/minio-init.sh:/usr/local/bin/minio-init.sh:ro
 
   api:
     build: ./backend
